app/assets/stylesheets/custom.scss
/* ... */
.single-footer-widget .instafeed {
  margin-left: -5px;
  margin-right: -5px;
}

.single-footer-widget .instafeed li {
  margin: 5px;
}

.single-footer-widget .subscribe_form {
  padding-top: 25px;
}

.single-footer-widget .input-group {
  display: block !important;
}

.single-footer-widget input {
  width: 100%;
  border: 1px solid #fff;
  font-size: 13px;
  line-height: 30px;
  padding-right: 40px;
  height: 40px;
  color: #999999;
  background: #fff;
  padding-left: 20px;
}

.single-footer-widget input.placeholder {
  color: #999999;
}

.single-footer-widget input:-moz-placeholder {
  color: #999999;
}

.single-footer-widget input::-moz-placeholder {
  color: #999999;
}

.single-footer-widget input::-webkit-input-placeholder {
  color: #999999;
}

.single-footer-widget input:focus {
  outline: none;
}

.single-footer-widget .sub-btn {
  background: #ff2f92;
  color: #fff;
  font-weight: 300;
  border-radius: 0;
  line-height: 34px;
  padding: 4px 11px 0px;
  cursor: pointer;
  position: absolute;
  right: 0px;
  top: 0px;
}

.single-footer-widget .sub-btn span {
  position: relative;
  top: -1px;
}

.footer_title {
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  color: #fff;
  margin-bottom: 28px;
}

.border_line {
  width: 100%;
  height: 1px;
  background: #333333;
  margin-top: 30px;
}

.footer-bottom {
  padding-top: 70px;
}

.footer-bottom .footer-text {
  margin-bottom: 0px;
}

.footer-bottom .footer-text i {
  color: #ff2f92;
}

.footer-bottom .footer-text a {
  color: #ff2f92;
}

.footer-bottom .footer-social {
  text-align: right;
}

.footer-bottom .footer-social a {
  font-size: 18px;
  line-height: 30px;
  color: #82848f;
  margin-left: 25px;
  -webkit-transition: all 0.3s linear;
  -o-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.footer-bottom .footer-social a:hover {
  color: #ff2f92;
}

.f_social_wd p {
  font-size: 14px;
  color: #777777;
  margin-bottom: 15px;
}

.f_social_wd .f_social a {
  font-size: 14px;
  color: #777777;
  -webkit-transition: all 0.3s linear;
  -o-transition: all 0.3s linear;
  transition: all 0.3s linear;
  margin-right: 20px;
}

.f_social_wd .f_social a:hover {
  color: #ff2f92;
}

.f_social_wd .f_social a:last-child {
  margin-right: 0px;
}

/*---------------------------------------------------- */

/*# sourceMappingURL=style.css.map */

.rounded-circle {
  height: 120px;
  weight: 120px;
}

.image-new {
  max-height: 60px;
  max-weight: 100px;
}

.owner-review-avatar {
 max-height: 40px;
 max-weight: 40px;
}

.user-avatar-size {
  max-width: 300px;
  max-height: 200px;
}

.form-control-x {
  font-size: 14px;
  line-height: 29px;
  border: 0px;
  width: 100%;
  font-weight: 300;
  color: #777777;
  padding-left: 20px;
  border-radius: 45px;
  z-index: 0;
  background: transparent;
}

